# backend/src/auth/dto/auth-request.dto.ts
@@ -1,0 +1,11 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+
+export class LoginRequestDto {
+  username: string;
+  password: string;
+}
+
+export class RefreshRequestDto {
+  @ApiPropertyOptional()
+  refreshToken?: string;
+}
